Fix spacing issue of navlinks on small devices

--- a/_sass/_navbar.sass
+++ b/_sass/_navbar.sass
@@ -31,11 +31,7 @@ $hidden-navbar-bg-color: #FAFAFA
 .index-navbar #navbar, #navbar
   background: white
   +media(max-width 1180px)
-    background-color: rgba(#FBFBFB, 0.6)
-    padding-bottom: 50px
-  +media(max-width 777px)
-    //padding-bottom: 250px
-    height: 100%
+    background-color: rgba(white, 0)
   flex-shrink: 0
   img
     margin:
